public interface Flyable{
    public void Fly();
}
