public interface Runnable {
    public void Run();
}
